# road

./: .env.example  .gitignore  CLAUDE.md  DATABASE_DRIVEN_PIPELINE.md  README.md  database_schema.sql  demo_coordinate_fetching.py  edinburgh_trial_results_20250819_185121.json  edinburgh_trial_summary_20250819_185121.json  main.py  pyproject.toml  requirements-ml.txt  requirements.txt  run_edinburgh_trial.py  run_full_analysis.py  run_full_dataset_analysis.py  run_parallel_analysis.py  run_street_points_analysis.py  run_targeted_analysis.py  test_database_integration.py  test_services_integration.py
db/: db_config.py  toid_storage_service.py
examples/: toid_metadata_example.py
services/: mapillary_client.py  os_features_client.py
src/: Untitled-1.json  database_schema.sql  main.py
src/clients/mapillary/: mapillary_client.py
src/clients/ordnance_survey/: __init__.py  os_features_client.py  os_names_client.py
src/config/: __init__.py  quality_config.py  road_config.py
src/database/: __init__.py  database_service.py  db_init.py
src/database/config/: connection.py  init.py
src/database/services/: database_service.py
src/services/: image_fetcher.py  mapillary_client.py  street_data_service.py  toid_metadata_service.py
src/services/image/: fetcher_service.py
src/services/image/quality/: __init__.py  failure_reasons.py  heuristics.py  quality_metrics.py  quality_service.py  segmentation.py
src/services/image_quality/: __init__.py  failure_reasons.py  heuristics.py  quality_metrics.py  quality_service.py  segmentation.py
src/services/pipeline/: __init__.py  database_pipeline.py  example_usage.py  pipeline_result.py  road_analysis_pipeline.py  toid_analysis_pipeline.py
src/services/road/analysis/: __init__.py  road_quality_service.py  yolo_model.py
src/services/road/section/: road_section_service.py
src/services/road_quality/: __init__.py  metrics.py  model.py  model_factory.py  preprocessor.py  road_quality_service.py  yolo_model.py
src/utils/: coord_utils.py
tests/: test_configuration.py  test_coordinate_fetching.py  test_metadata.py  test_pipeline.py  test_quality_debugging.py  test_road_quality_service.py
(+1 files in other folders)
